name:                hamazed
version:             0.1.0.0
Category:            Game
Synopsis:            A game with numbers, a spaceship and a laser.
Description:         The goal is to shoot the numbers that should add up to the
                     objective of the level.
homepage:            https://github.com/OlivierSohn/hamazed#readme
license:             BSD3
license-file:        LICENSE
author:              Olivier Sohn
maintainer:          olivier.sohn@gmail.com
copyright:           2017 Olivier Sohn
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10


library
  hs-source-dirs:      src
  exposed-modules:     Run, Math
  other-modules:       Imajuscule.Prelude
                     , Animation
                     , Animation.Design.Animator
                     , Animation.Design.Apply
                     , Animation.Design.Chain
                     , Animation.Design.Chars
                     , Animation.Design.RenderUpdate
                     , Animation.Design.Geo
                     , Animation.Types
                     , Animation.Util
                     , Color
                     , Render.Console
                     , Game.Deadline
                     , Game.Event
                     , Game
                     , Game.Parameters
                     , Geo
                     , Collision
                     , Geo.Conversion
                     , Geo.Continuous
                     , Geo.Continuous.Types
                     , Geo.Discrete
                     , Geo.Discrete.Bresenham
                     , Geo.Discrete.Resample
                     , Geo.Discrete.Types
                     , Geo.Types
                     , IO.Blocking
                     , IO.NonBlocking
                     , IO.Types
                     , Game.Level
                     , Game.Level.Types
                     , Game.World.Embedded
                     , Game.World.Frame
                     , Game.World.Laser
                     , Game.World.Laser.Types
                     , Game.World.Number
                     , Game.World.Ship
                     , Game.World.Space.Types
                     , Game.World.Types
                     , Render
                     , Render.Backends.Full
                     , Render.Backends.Delta
                     , Render.Backends.Internal.Delta
                     , Game.World.Space
                     , Threading
                     , Timing
                     , Util
                     , Game.World
                     , Game.World.Size
  build-depends:       base >= 4.8 && < 4.11
                     , ansi-terminal
                     , array
                     , colour
                     , containers
                     , ease
                     , matrix
                     , monad-loops
                     , monadlist
                     , random
                     , terminal-size
                     , text
                     , thyme
                     , time
                     , vector
  default-language:    Haskell2010

executable hamazed-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts +RTS -maxN4 -RTS
  build-depends:       base
                     , hamazed
  default-language:    Haskell2010

test-suite hamazed-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hamazed
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/OlivierSohn/hamazed
