name:                hamazed
version:             0.1.0.0
Category:            Game
Synopsis:            A game with numbers, a spaceship and a laser.
Description:         The goal is to shoot the numbers that should add up to the
                     objective of the level.
homepage:            https://github.com/OlivierSohn/hamazed#readme
license:             BSD3
license-file:        LICENSE
author:              Olivier Sohn
maintainer:          olivier.sohn@gmail.com
copyright:           2017 Olivier Sohn
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10


library
  hs-source-dirs:      src
  other-modules:
  exposed-modules:     Imajuscule.Prelude
                     , Animation
                     , Animation.Design.Animator
                     , Animation.Design.Apply
                     , Animation.Design.Chain
                     , Animation.Design.Chars
                     , Animation.Design.RenderUpdate
                     , Animation.Design.Geo
                     , Animation.Types
                     , Animation.Util
                     , Collision
                     , Color
                     , Color.Interpolation
                     , Evolution
                     , Game.Deadline
                     , Game.Event
                     , Game
                     , Game.Parameters
                     , Game.Level
                     , Game.Level.Types
                     , Game.Render
                     , Game.Types
                     , Game.World
                     , Game.World.Embedded
                     , Game.World.Evolution
                     , Game.World.Frame
                     , Game.World.Frame.Types
                     , Game.World.Laser
                     , Game.World.Laser.Types
                     , Game.World.Number
                     , Game.World.Ship
                     , Game.World.Size
                     , Game.World.Space
                     , Game.World.Space.Types
                     , Game.World.Types
                     , Geo
                     , Geo.Conversion
                     , Geo.Continuous
                     , Geo.Continuous.Types
                     , Geo.Discrete
                     , Geo.Discrete.Bresenham
                     , Geo.Discrete.Bresenham3
                     , Geo.Discrete.Resample
                     , Geo.Discrete.Types
                     , Geo.Types
                     , Interpolation
                     , IO.Blocking
                     , IO.NonBlocking
                     , IO.Types
                     , Iteration
                     , Math
                     , Render
                     , Render.Backends.Full
                     , Render.Backends.Delta
                     , Render.Backends.Internal.Delta
                     , Render.Console
                     , Run
                     , Text.Animated
                     , Text.ColorString
                     , Threading
                     , Timing
                     , Util
  build-depends:       base >= 4.8 && < 4.11
                     , ansi-terminal
                     , array
                     , colour
                     , containers
                     , ease
                     , matrix
                     , monad-loops
                     , monadlist
                     , random
                     , terminal-size
                     , text
                     , thyme
                     , time
                     , vector
  default-language:    Haskell2010

executable hamazed-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts +RTS -maxN4 -RTS
  build-depends:       base
                     , hamazed
  default-language:    Haskell2010

test-suite hamazed-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  other-modules:       Test.Bresenham3
                     , Test.Ease
                     , Test.InterpolatedColorString
                     , Test.Interpolation
                     , Test.Rendering
                     , Test.WorldEvolutions
  main-is:             Spec.hs
  build-depends:       base
                     , hamazed
                     , text
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/OlivierSohn/hamazed
