name:                simple
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/OlivierSohn/simple#readme
license:             BSD3
license-file:        LICENSE
author:              Olivier Sohn
maintainer:          olivier.sohn@gmail.com
copyright:           All rights reserved to Olivier Sohn
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  other-modules:       Animation
                     , Console
                     , Geo
                     , Laser
                     , NonBlockingIO
                     , Threading
                     , Timing
                     , Util
                     , World
                     , WorldSize
  build-depends:       base
                     , ansi-terminal
                     , monad-loops
                     , thyme
                     , time
                     , random
  default-language:    Haskell2010

executable simple-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , simple
  default-language:    Haskell2010

test-suite simple-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , simple
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/OlivierSohn/simple
