name:                imj-animation-base
version:             0.1.0.0
Category:            Game Engine
Synopsis:            Animation Framework
Description:         Library of classes and functions related to animation.
homepage:            https://github.com/OlivierSohn/hamazed/blob/master/imj-animation-base/README.md
license:             BSD3
license-file:        LICENSE
author:              Olivier Sohn
maintainer:          olivier.sohn@gmail.com
copyright:           2017 Olivier Sohn
category:            GameEngine
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

Tested-With: GHC == 8.0.2

library
  hs-source-dirs:      src
  other-modules:
  exposed-modules:     Animation.Color
                     , Animation.Design.Animator
                     , Animation.Design.Apply
                     , Animation.Design.Chain
                     , Animation.Design.RenderUpdate
                     , Animation.Timing
                     , Animation.Types
                     , Animation.Util
  build-depends:       base >= 4.8 && < 4.11
                     , mtl >= 2.2.1 && < 2.3
                     , imj-base
                     , imj-draw
                     , imj-prelude ==0.1.*
  default-language:    Haskell2010

test-suite imj-animation-base-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  other-modules:
  main-is:             Spec.hs
  build-depends:       base
                     , imj-animation-base
                     , imj-base
                     , imj-draw
                     , imj-prelude ==0.1.*
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/OlivierSohn/hamazed/
