name:                imj-animation
version:             0.1.0.0
Category:            Game Engine
Synopsis:            Animations
Description:         Library of explosive and gravity-based animations which can be
                     chained on collision with the environment.
homepage:            https://github.com/OlivierSohn/hamazed/blob/master/imj-animation/README.md
bug-reports:         https://github.com/OlivierSohn/hamazed/issues/
license:             BSD3
license-file:        LICENSE
author:              Olivier Sohn
maintainer:          olivier.sohn@gmail.com
copyright:           2017 Olivier Sohn
build-type:          Simple
extra-source-files:  README.md CHANGELOG.md
cabal-version:       >=1.10

Tested-With: GHC == 8.0.2

library
  hs-source-dirs:      src
  other-modules:
  exposed-modules:
                       Animation
                     , Animation.Design.Chars
                     , Animation.Design.Geo
  build-depends:       base >= 4.8 && < 4.11
                     , mtl >= 2.2.1 && < 2.3
                     , imj-animation-base ==0.1.*
                     , imj-base ==0.1.*
                     , imj-draw ==0.1.*
                     , imj-engine ==0.1.*
                     , imj-prelude ==0.1.*
  ghc-options:       -Wall -fpedantic-bottoms -Wredundant-constraints
                     -O2 -fexcess-precision -optc-ffast-math
  default-language:    Haskell2010

test-suite imj-animation-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  other-modules:
  main-is:             Spec.hs
  build-depends:       base >= 4.8 && < 4.11
  ghc-options:       -Wall -fpedantic-bottoms -Wredundant-constraints
                     -O2 -fexcess-precision -optc-ffast-math
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/OlivierSohn/hamazed/
  subdir:   imj-animation
