name:                imj-animation
version:             0.1.0.3
Category:            Animation, Game Engine, Graphics, Algorithms
Synopsis:            Animation Framework
Description:         Framework to create event-based, physics-based, composed, generative animations.
homepage:            https://github.com/OlivierSohn/hamazed/blob/master/imj-animation/README.md
bug-reports:         https://github.com/OlivierSohn/hamazed/issues/
license:             BSD3
license-file:        LICENSE
author:              Olivier Sohn
maintainer:          olivier.sohn@gmail.com
copyright:           2017 - 2018 Olivier Sohn
build-type:          Simple
extra-source-files:  README.md CHANGELOG.md
cabal-version:       >=1.10

Tested-With: GHC == 8.0.2, GHC == 8.2.2

library
  hs-source-dirs:      src
  other-modules:
  exposed-modules:
                      -- concrete animations
                       Imj.Graphics.Animation
                     , Imj.Graphics.Animation.Chars
                     , Imj.Graphics.Animation.Geo
                     , Imj.Graphics.Animation.Internal
                      -- core animation
                     , Imj.Graphics.Animation.Design.Color
                     , Imj.Graphics.Animation.Design.Create
                     , Imj.Graphics.Animation.Design.Draw
                     , Imj.Graphics.Animation.Design.Timing
                     , Imj.Graphics.Animation.Design.Types
                     , Imj.Graphics.Animation.Design.Update
                     , Imj.Graphics.Animation.Design.UpdateParticles
  build-depends:       base >= 4.8 && < 4.12
                     , mtl >= 2.2.1 && < 2.3
                     , imj-base ==0.1.*
                     , imj-prelude ==0.1.*
  default-language:    Haskell2010

test-suite imj-animation-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  other-modules:
  main-is:             Spec.hs
  build-depends:       base >= 4.8 && < 4.12
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/OlivierSohn/hamazed/
  subdir:   imj-animation
