name:                imj-audio
version:             0.1.0.3
Category:            Audio
Synopsis:            Bindings to a C++ audio engine.
Description:         Bindings to a C++ audio engine allowing to play music in real time.
homepage:            https://github.com/OlivierSohn/hamazed/blob/master/imj-audio//README.md
bug-reports:         https://github.com/OlivierSohn/hamazed/issues/
license:             BSD3
license-file:        LICENSE
author:              Olivier Sohn
maintainer:          olivier.sohn@gmail.com
copyright:           2017 - 2018 Olivier Sohn
build-type:          Simple
extra-source-files:  README.md CHANGELOG.md
cabal-version:       >=1.10

Tested-With: GHC == 8.0.2, GHC == 8.2.2

Flag Debug
    Description: Enable assertions and audio debug logs
    Manual: True
    Default: False

library
  hs-source-dirs:      src
  other-modules:
  c-sources:           c/library.cpp
                     , c/extras.cpp
                     , c/wrapper.cpp
  exposed-modules:     Imj.Audio
                     , Imj.Audio.Bindings
                     , Imj.Audio.Wrapper
                     , Imj.Music.Alter
                     , Imj.Music.Compose
                     , Imj.Music.CTypes
                     , Imj.Music.Instruments
                     , Imj.Music.Play
                     , Imj.Music.Score
  build-depends:       base >= 4.9 && < 4.12
                     , binary == 0.8.*
                     , containers ==0.5.*
                     , deepseq ==1.4.*
                     , imj-prelude ==0.1.*
                     , imj-time ==0.1.*
                     , parsec ==3.1.*
                     , strict-concurrency ==0.2.*
                     , template-haskell >=2.12 && < 2.14
                     , text >=1.2.3 && < 1.3
                     , unliftio ==0.2.*
                     , unliftio-core ==0.1.*
                     , vector >= 0.12.0.1 && < 0.13
  default-language:    Haskell2010


  extra-libraries:     stdc++

  if os(linux) || os(freebsd) || os(darwin)
    pkgconfig-depends: portaudio-2.0
  else
    extra-libraries:   portaudio

  if os(darwin)
    extra-libraries:   vDSP
    -- This path is valid on OSX 10.13.3:
    extra-lib-dirs:    /System/Library/Frameworks/Accelerate.framework/Versions/A/Frameworks/vecLib.framework/Versions/A

  cc-options:          -std=c++17 -D_USE_MATH_DEFINES -Os -ffast-math
  if(!flag(Debug))
    -- we need rtti only in debug mode
    cc-options:        -DNDEBUG -fno-rtti
  if os(linux)
    cc-options:        -fpermissive
  if os(windows)
    cc-options:        -D_UNICODE -DUNICODE
    -- TODO we may need -municode at link time.

executable imj-audio-exe
  hs-source-dirs:      example
  main-is:             Main.hs
  build-depends:       base >= 4.9 && < 4.12
                     , imj-audio
                     , imj-prelude ==0.1.*
  default-language:    Haskell2010

test-suite imj-audio-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  other-modules:       Test.Imj.ParseMusic
  main-is:             Spec.hs
  build-depends:       base >= 4.9 && < 4.12
                     , imj-audio
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/OlivierSohn/hamazed/
  subdir:   imj-audio
